Updated Speakers and news

--- a/index.html
+++ b/index.html
@@ -154,9 +154,8 @@
           <span class="note">December 2nd, 2014</span>
           <h3>New speaker announced!</h3>
           <p>
-            Scott Chacon, CIO and VP of R&D of Github, Git evangelist and software developer<br>
-            Also known as the autor of the book Pro Git, considered by many the holy bible of git, <br>
-            will be at SINFO on 25th of February.
+            Bethany Andres-Beck, one of the most important worldwide programmers ,<br> currently work as Software Engineer at Twitter, 
+            will be at SINFO on <br> February 23rd.
           </p>
         </div>
         <div class="all-40 medium-50 small-100 tiny-100 justify-text">
@@ -225,6 +224,22 @@
           <h6>Minh Le</h6>
           <a href="https://twitter.com/GoosemanTI" target="_blank"><img src="img/speakers/gooseman.png" onmouseover="this.src='img/speakers/back/gooseman.png'" onmouseout="this.src='img/speakers/gooseman.png'" alt=""></a>
           <p class="note">Computer game developer and creator of Counter-Strike</p>
+        </div>
+        <!-- -->
+        <div class="all-33 medium-33 small-50 tiny-100">
+          <h6>Carlos Fonseca</h6>
+          <img src="img/speakers/CFonseca.jpg" onmouseover="this.src='img/speakers/back/CFonseca.jpg'" onmouseout="this.src='img/speakers/CFonseca.jpg'" alt="">
+          <p class="note">Executive IT Architect at IBM Thomas J. Watson Research Center.</p>
+        </div>
+        <div class="all-33 medium-33 small-50 tiny-100">
+          <h6>Josh Bleecher Snyder</h6>
+          <a href="https://twitter.com/offbymany" target="_blank"><img src="img/speakers/snyder.jpg" onmouseover="this.src='img/speakers/back/snyder.jpeg'" onmouseout="this.src='img/speakers/snyder.jpg'" alt=""></a>
+          <p class="note">Software Engineering Manager at PayPal and card.io Co-Founder</p>
+        </div>
+        <div class="all-33 medium-33 small-50 tiny-100">
+          <h6>Bethany Andres-Beck</h6>
+          <img src="img/speakers/bethany.jpg" onmouseover="this.src='img/speakers/back/bethany.png'" onmouseout="this.src='img/speakers/bethany.jpg'" alt="">
+          <p class="note">Software Engineer at Twitter</p>
         </div>
       </div>
     </div>
