Added Eythor Bender

--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
       </div>
       <div class="column-group gutters">
         <div class="all-60 medium-50 small-100 tiny-100 justify-text">
-          <span class="note">December 2nd, 2014</span>
+          <span class="note">January 14th, 2014</span>
           <h3>New speaker announced!</h3>
           <p>
-            Bethany Andres-Beck, one of the most important worldwide programmers ,<br> currently work as Software Engineer at Twitter, 
-            will be at SINFO on <br> February 23rd.
+            Eythor Bender, Co-founder and CEO of UNYQ, board member of Kerecis and adjunct faculty member at Singularity University, known as an innovator and business leader in the emerging field of robotics or bionics.<br>
+            He will be at SINFO on February 26.
           </p>
         </div>
         <div class="all-40 medium-50 small-100 tiny-100 justify-text">
@@ -240,6 +240,11 @@
           <h6>Bethany Andres-Beck</h6>
           <img src="img/speakers/bethany.jpg" onmouseover="this.src='img/speakers/back/bethany.png'" onmouseout="this.src='img/speakers/bethany.jpg'" alt="">
           <p class="note">Software Engineer at Twitter</p>
+        </div>
+        <div class="all-33 medium-33 small-50 tiny-100">
+          <h6>Eythor Bender</h6>
+          <img src="img/speakers/bender.jpg" onmouseover="this.src='img/speakers/back/bender.png'" onmouseout="this.src='img/speakers/bender.jpg'" alt="">
+          <p class="note">Co Founder & CEO of UNYQ</p>
         </div>
       </div>
     </div>
