--- a/sponsor.html
+++ b/sponsor.html
@@ -364,10 +364,15 @@
                             </div>
                           </div>
                           <ul>
-                          	<li class="infoStand">Stands layout on the technological exposition in the Civil Engineering Building:</li>
+                          	<li class="infoStand">Stands layout on the technological exposition in the Civil Engineering Building (on the left) and Central Pavilion (on the right):</li>
                           </ul>
-                          <div class="all-50 medium-60 small-100 tiny-100 push-center">
-                            <img src="img/sponsors/MapaStandsCivil.jpg">
+                          <div class="column-group push-center half-gutters">
+	                          <div class="all-65 medium-60 small-100 tiny-100 push-center">
+	                            <img src="img/sponsors/MapaStandsCivil.jpg">
+	                          </div>
+	                          <div class="all-35 medium-60 small-100 tiny-100 push-center">
+	                            <img src="img/sponsors/MapaStandsCentral.jpg">
+	                          </div>
                           </div>
                         </div>
                           </td></tr>
