Updated Sinfo logo

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <div class="header" id="header">
       <div class="opacidade">
-        <h1><a href="#" title=""><img src="img/sinfo_natal_site.png"></a></h1>
+        <h1><a href="#" title=""><img src="img/logo.png"></a></h1>
         <div class="description">
           SINFO is an annual not-for-profit event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition.
           <br><br>
