Added Adam Baldwin

--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
           <span class="note">January 14th, 2014</span>
           <h3>New speaker announced!</h3>
           <p>
-            Eythor Bender, Co-founder and CEO of UNYQ, board member of Kerecis and adjunct faculty member at Singularity University, known as an innovator and business leader in the emerging field of robotics or bionics.<br>
-            He will be at SINFO on February 26.
+            Adam Baldwin, Chief Security Officer/Director de Seguridad at &yet<br>
+            He will be at SINFO on February 25.
           </p>
         </div>
         <div class="all-40 medium-50 small-100 tiny-100 justify-text">
@@ -245,6 +245,11 @@
           <h6>Eythor Bender</h6>
           <img src="img/speakers/bender.jpg" onmouseover="this.src='img/speakers/back/bender.png'" onmouseout="this.src='img/speakers/bender.jpg'" alt="">
           <p class="note">Co Founder & CEO of UNYQ</p>
+        </div>
+        <div class="all-33 medium-33 small-50 tiny-100">
+          <h6>Adam Baldwin</h6>
+          <img src="img/speakers/baldwin.png" onmouseover="this.src='img/speakers/back/baldwin.png'" onmouseout="this.src='img/speakers/baldwin.png'" alt="">
+          <p class="note">Chief Security Officer/Director de Seguridad at &yet</p>
         </div>
       </div>
     </div>
