Fixed Adam Baldwin role

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <span class="note">January 14th, 2014</span>
           <h3>New speaker announced!</h3>
           <p>
-            Adam Baldwin, Chief Security Officer/Director de Seguridad at &yet<br>
+            Adam Baldwin, Chief Security Officer at &yet and Team Lead at ^lift security<br>
             He will be at SINFO on February 25.
           </p>
         </div>
@@ -249,7 +249,7 @@
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Adam Baldwin</h6>
           <img src="img/speakers/baldwin.png" onmouseover="this.src='img/speakers/back/baldwin.png'" onmouseout="this.src='img/speakers/baldwin.png'" alt="">
-          <p class="note">Chief Security Officer/Director de Seguridad at &yet</p>
+          <p class="note">Chief Security Officer at &yet and Team Lead at ^lift security</p>
         </div>
       </div>
     </div>
