Added Steve Francia

--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
           <span class="note">January 14th, 2014</span>
           <h3>New speaker announced!</h3>
           <p>
-            Adam Baldwin, Chief Security Officer at &yet and Team Lead at ^lift security<br>
-            He will be at SINFO on February 25.
+            Steve Francia, Chief Developer Advocate for MongoDB where he is responsible for the user experience of one of the world's fastest growing database, will be at SINFO on February 27.
           </p>
         </div>
         <div class="all-40 medium-50 small-100 tiny-100 justify-text">
@@ -250,6 +249,11 @@
           <h6>Adam Baldwin</h6>
           <img src="img/speakers/baldwin.png" onmouseover="this.src='img/speakers/back/baldwin.png'" onmouseout="this.src='img/speakers/baldwin.png'" alt="">
           <p class="note">Chief Security Officer at &yet and Team Lead at ^lift security</p>
+        </div>
+        <div class="all-33 medium-33 small-50 tiny-100">
+          <h6>Steve Francia</h6>
+          <img src="img/speakers/francia.jpg" onmouseover="this.src='img/speakers/back/francia.png'" onmouseout="this.src='img/speakers/francia.jpg'" alt="">
+          <p class="note"> Chief Developer Advocate for MongoDB</p>
         </div>
       </div>
     </div>
