Added Steve huffman

--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
       </div>
       <div class="column-group gutters">
         <div class="all-60 medium-50 small-100 tiny-100 justify-text">
-          <span class="note">January 14th, 2014</span>
+          <span class="note">January 26th, 2014</span>
           <h3>New speaker announced!</h3>
           <p>
-            Steve Francia, Chief Developer Advocate for MongoDB where he is responsible for the user experience of one of the world's fastest growing database, will be at SINFO on February 27.
+            Steve Huffman, Co-Founder of Reddit and Hipmunk, will be at SINFO on February 23!
           </p>
         </div>
         <div class="all-40 medium-50 small-100 tiny-100 justify-text">
@@ -243,7 +243,7 @@
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Eythor Bender</h6>
           <img src="img/speakers/bender.jpg" onmouseover="this.src='img/speakers/back/bender.png'" onmouseout="this.src='img/speakers/bender.jpg'" alt="">
-          <p class="note">Co Founder & CEO of UNYQ</p>
+          <p class="note">Co-Founder & CEO of UNYQ</p>
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Adam Baldwin</h6>
@@ -254,6 +254,11 @@
           <h6>Steve Francia</h6>
           <img src="img/speakers/francia.jpg" onmouseover="this.src='img/speakers/back/francia.png'" onmouseout="this.src='img/speakers/francia.jpg'" alt="">
           <p class="note"> Chief Developer Advocate for MongoDB</p>
+        </div>
+        <div class="all-33 medium-33 small-50 tiny-100">
+          <h6>Steve Huffman</h6>
+          <img src="img/speakers/huffman.jpg" onmouseover="this.src='img/speakers/back/huffman.jpg'" onmouseout="this.src='img/speakers/huffman.jpg'" alt="">
+          <p class="note"> Co-Founder of Reddit and Hipmunk</p>
         </div>
       </div>
     </div>
@@ -430,8 +435,9 @@
           <br>
           <a href="mailto:mariana.paulo@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
-      </div>
-      <div class="column-group gutters">
+        <div class="all-5 hide-medium hide-small hide-tiny">
+          <!-- spacer -->
+        </div>
         <div class="all-5 hide-medium hide-small hide-tiny">
           <!-- spacer -->
         </div>
@@ -465,14 +471,15 @@
           <br>
           <a href="mailto:mike.duarte@sinfo.org"><i class="fa fa-envelope"></i></a>
       	</div>
-     	<div class="all-15 medium-30 small-50 tiny-50">
+     	  <div class="all-15 medium-30 small-50 tiny-50">
           <h6>Pedro Saraiva</h6>
           <img src="img/team/pedro_saraiva.jpg" onmouseover="this.src='img/team/pedro_saraiva_sinfo.jpg'" onmouseout="this.src='img/team/pedro_saraiva.jpg'" alt="">
           <br>
           <a href="mailto:pedro.saraiva@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
-      </div>
-      <div class="column-group gutters">
+        <div class="all-5 hide-medium hide-small hide-tiny">
+          <!-- spacer -->
+        </div>
         <div class="all-5 hide-medium hide-small hide-tiny">
           <!-- spacer -->
         </div>
@@ -512,8 +519,9 @@
           <br>
           <a href="mailto:mafalda.magro@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
-      </div>
-      <div class="column-group gutters">
+        <div class="all-5 hide-medium hide-small hide-tiny">
+          <!-- spacer -->
+        </div>
         <div class="all-5 hide-medium hide-small hide-tiny">
           <!-- spacer -->
         </div>
@@ -553,8 +561,9 @@
           <br>
           <a href="mailto:joao.antunes@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
-      </div>
-      <div class="column-group gutters">
+        <div class="all-5 hide-medium hide-small hide-tiny">
+          <!-- spacer -->
+        </div>
         <div class="all-5 hide-medium hide-small hide-tiny">
           <!-- spacer -->
         </div>
@@ -594,8 +603,9 @@
           <br>
           <a href="mailto:duarte.paiva@sinfo.org"><i class="fa fa-envelope"></i></a>
         </div>
-      </div>
-      <div class="column-group gutters">
+        <div class="all-5 hide-medium hide-small hide-tiny">
+          <!-- spacer -->
+        </div>
       	 <div class="all-5 hide-medium hide-small hide-tiny">
           <!-- spacer -->
         </div>
