Corrected reddit image

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Steve Huffman</h6>
-          <img src="img/speakers/huffman.jpg" onmouseover="this.src='img/speakers/back/huffman.jpg'" onmouseout="this.src='img/speakers/huffman.jpg'" alt="">
+          <img src="img/speakers/huffman.jpg" onmouseover="this.src='img/speakers/back/huffman.png'" onmouseout="this.src='img/speakers/huffman.jpg'" alt="">
           <p class="note"> Co-Founder of Reddit and Hipmunk</p>
         </div>
       </div>
