Added Phil calçado

--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
       </div>
       <div class="column-group gutters">
         <div class="all-60 medium-50 small-100 tiny-100 justify-text">
-          <span class="note">January 26th, 2014</span>
+          <span class="note">February 1st, 2015</span>
           <h3>New speaker announced!</h3>
           <p>
-            Steve Huffman, Co-Founder of Reddit and Hipmunk, will be at SINFO on February 23!
+            Phil Calçado. Phil is Director of Engineering at SoundCloud, where he writes code and helps teams build and scale the largest audio repository in the world.
           </p>
         </div>
         <div class="all-40 medium-50 small-100 tiny-100 justify-text">
@@ -259,6 +259,11 @@
           <h6>Steve Huffman</h6>
           <img src="img/speakers/huffman.jpg" onmouseover="this.src='img/speakers/back/huffman.png'" onmouseout="this.src='img/speakers/huffman.jpg'" alt="">
           <p class="note"> Co-Founder of Reddit and Hipmunk</p>
+        </div>
+        <div class="all-33 medium-33 small-50 tiny-100">
+          <h6>Phil Calçado</h6>
+          <img src="img/speakers/phil.png" onmouseover="this.src='img/speakers/back/phil.png'" onmouseout="this.src='img/speakers/phil.png'" alt="">
+          <p class="note"> Director of Engineering at SoundCloud</p>
         </div>
       </div>
     </div>
