Added brokep to speakers

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
           <span class="note">February 1st, 2015</span>
           <h3>New speaker announced!</h3>
           <p>
-            Phil Calçado. Phil is Director of Engineering at SoundCloud, where he writes code and helps teams build and scale the largest audio repository in the world.
+            Peter Sunde. Peter is a computer expert with Norwegian and Finnish roots. He is best known for being a co-founder and ex-spokesperson of The Pirate Bay, a BitTorrent search engine.
           </p>
         </div>
         <div class="all-40 medium-50 small-100 tiny-100 justify-text">
@@ -264,6 +264,11 @@
           <h6>Phil Calçado</h6>
           <img src="img/speakers/phil.png" onmouseover="this.src='img/speakers/back/phil.png'" onmouseout="this.src='img/speakers/phil.png'" alt="">
           <p class="note"> Director of Engineering at SoundCloud</p>
+        </div>
+        <div class="all-33 medium-33 small-50 tiny-100">
+          <h6>Peter Sunde</h6>
+          <img src="img/speakers/PeterSunde.png" onmouseover="this.src='img/speakers/back/PeterSunde.png'" onmouseout="this.src='img/speakers/PeterSunde.png'" alt="">
+          <p class="note"> Co-founder and ex-spokesperson of The Pirate Bay</p>
         </div>
       </div>
     </div>
