--- a/22/schedule.html
+++ b/22/schedule.html
@@ -375,6 +375,7 @@
                           <li style="width:160px"><a href="http://www.capgemini.com/" target="_blank"><img src="assets/img/sponsor/Capgemini.png" width="160px" alt="sponsor-1" /></a></li>
                         </ul> 
                       </div>
+                      <hr style="max-width: 940px; width: 100%">
                       <p style="text-align:center"><p style="text-align:center"><span style="font-size: 20px;"> <b> Companies present on Central Pavilion Building </b> </span></p></p>
                       <div class="row" style="margin-left:25px">
                         <ul class="list-inline">
@@ -720,6 +721,7 @@
                           <li style="width:160px"><a href="http://www.capgemini.com/" target="_blank"><img src="assets/img/sponsor/Capgemini.png" width="160px" alt="sponsor-1" /></a></li>
                         </ul> 
                       </div>
+                      <hr style="max-width: 940px; width: 100%">
                       <p style="text-align:center"><p style="text-align:center"><span style="font-size: 20px;"> <b> Companies present on Central Pavilion Building </b> </span></p></p>
                       <div class="row" style="margin-left:25px">
                         <ul class="list-inline">
@@ -1050,6 +1052,7 @@
                           <li style="width:160px"><a href="http://www.edisoft.pt//" target="_blank"><img src="assets/img/sponsor/Edisoft.png" width="160px" alt="sponsor-1" /></a></li>
                         </ul> 
                       </div>
+                      <hr style="max-width: 940px; width: 100%">
                       <p style="text-align:center"><p style="text-align:center"><span style="font-size: 20px;"> <b> Companies present on Central Pavilion Building </b> </span></p></p>
                       <div class="row" style="margin-left:25px">
                         <ul class="list-inline">
@@ -1359,6 +1362,7 @@
                           <li style="width:160px"><a href="http://www.edisoft.pt//" target="_blank"><img src="assets/img/sponsor/Edisoft.png" width="160px" alt="sponsor-1" /></a></li>
                         </ul> 
                       </div>
+                      <hr style="max-width: 940px; width: 100%">
                       <p style="text-align:center"><p style="text-align:center"><span style="font-size: 20px;"> <b> Companies present on Central Pavilion Building </b> </span></p></p>
                       <div class="row" style="margin-left:25px">
                         <ul class="list-inline">
