Updated Manuel Boza

--- a/22/index.html
+++ b/22/index.html
@@ -198,13 +198,13 @@
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="0">
-              <a href="speaker/EythorBender.html">
+              <!--<a href="speaker/EythorBender.html">-->
                 <div class="img-wrapper">
-                  <img src="assets/img/speaker/bender.jpg" class="img-responsive img-circle" alt="Eythor Bender" />
+                  <img src="assets/img/speaker/ManuelB.jpg" class="img-responsive img-circle" alt="manuel Boza" />
                 </div>
-                <div class="name">Eythor Bender</div>
+                <div class="name">Manuel Boza</div>
                 <div class="sub">UNYQ</div>
-              </a>
+             <!-- </a>-->
             </div>
           </div>
           <div class="col-md-3 col-sm-3 col-xs-6">
