--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
           <p class="note">Software Engineer at Twitter</p>
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
-          <h6>Eythor Bender</h6>
-          <img src="img/speakers/bender.jpg" onmouseover="this.src='img/speakers/back/bender.png'" onmouseout="this.src='img/speakers/bender.jpg'" alt="">
-          <p class="note">Co-Founder & CEO of UNYQ</p>
+          <h6>Manuel Boza</h6>
+          <img src="img/speakers/ManuelB.jpg" onmouseover="this.src='img/speakers/back/bender.png'" onmouseout="this.src='img/speakers/ManuelB.jpg'" alt="">
+          <p class="note">Co-Founder of UNYQ</p>
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Adam Baldwin</h6>
