Updated Manuel Boza

--- a/22/schedule.html
+++ b/22/schedule.html
@@ -1084,13 +1084,13 @@
                       <!-- Speaker number one -->
                       <div class="panel panel-default">
                         <div class="speaker-wrapper" style="width:50px; left: 70px;">
-                          <img src="assets/img/speaker/bender.jpg" class="img-responsive img-circle" alt="speaker-1" />
+                          <img src="assets/img/speaker/ManuelB.jpg" class="img-responsive img-circle" alt="speaker-1" />
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 14h00 <div style="float: right"><i class="fa fa-map-marker"></i> Civil Engineering Building's Congress Center</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineFour" href="#itemTen" class="collapsed">
-                              Eythor Bender
+                              Manuel Boza
                               <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                             </a>
@@ -1100,7 +1100,7 @@
                           <div class="panel-body">
                             <article>
                               <p>Details soon...</p>
-                              <p class="author"><a href="speaker/EythorBender.html"><strong><i class="fa fa-user"></i> Eythor Bender - Co-Founder & CEO of UNYQ</strong></a></p>
+                              <p class="author"><strong><i class="fa fa-user"></i> Manuel Boza - Co-Founder of UNYQ</strong></p>
                             </article>
                           </div>
                         </div>
