--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
             <a class="logoPlaceholder" href="#" title="SINFO"><img src="img/logo.png"></a>
           </li>
           <li><a href="#news">News</a></li>
+          <li><a href="22/index.html">SINFO 22</a></li>
           <li><a href="#speakers">Speakers</a></li>
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
@@ -80,6 +81,7 @@
 
         <ul class="menu vertical flat black hide-all" id="topbar_menu">
           <li><a href="#news">News</a></li>
+          <li><a href="22/index.html">SINFO 22</a></li>
           <li><a href="#speakers">Speakers</a></li>
           <li><a href="#workshops">Workshops</a></li>
           <li><a href="#sponsors">Sponsor us!</a></li>
@@ -210,9 +212,11 @@
       </div>
       <div class="column-group gutters">
         <div class="all-33 medium-33 small-50 tiny-100">
-          <h6>Helder Pinto</h6>
-          <a href="https://twitter.com/HelderHP" target="_blank"><img src="img/speakers/HelderPinto.jpg" onmouseover="this.src='img/speakers/back/HelderPinto.jpg'" onmouseout="this.src='img/speakers/HelderPinto.jpg'" alt=""></a>
-          <p class="note">3D game environment artist at Blizzard</p>
+          <a href="22/speaker/HelderPinto.html">
+            <h6>Helder Pinto</h6>
+            <a href="https://twitter.com/HelderHP" target="_blank"><img src="img/speakers/HelderPinto.jpg" onmouseover="this.src='img/speakers/back/HelderPinto.jpg'" onmouseout="this.src='img/speakers/HelderPinto.jpg'" alt=""></a>
+            <p class="note">3D game environment artist at Blizzard</p>
+          </a>
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Scott Chacon</h6>
