--- a/index.html
+++ b/index.html
@@ -212,36 +212,34 @@
       </div>
       <div class="column-group gutters">
         <div class="all-33 medium-33 small-50 tiny-100">
-          <a href="22/speaker/HelderPinto.html">
-            <h6>Helder Pinto</h6>
-            <a href="https://twitter.com/HelderHP" target="_blank"><img src="img/speakers/HelderPinto.jpg" onmouseover="this.src='img/speakers/back/HelderPinto.jpg'" onmouseout="this.src='img/speakers/HelderPinto.jpg'" alt=""></a>
-            <p class="note">3D game environment artist at Blizzard</p>
-          </a>
+          <h6>Helder Pinto</h6>
+          <a href="22/speaker/HelderPinto.html"><img src="img/speakers/HelderPinto.jpg" onmouseover="this.src='img/speakers/back/HelderPinto.jpg'" onmouseout="this.src='img/speakers/HelderPinto.jpg'" alt=""></a>
+          <p class="note">3D game environment artist at Blizzard</p>
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Scott Chacon</h6>
-          <a href="https://twitter.com/chacon" target="_blank"><img src="img/speakers/ScottChacon.jpg" onmouseover="this.src='img/speakers/back/ScottChacon.jpg'" onmouseout="this.src='img/speakers/ScottChacon.jpg'" alt=""></a>
+          <a href="22/speaker/ScottChacon.html"><img src="img/speakers/ScottChacon.jpg" onmouseover="this.src='img/speakers/back/ScottChacon.jpg'" onmouseout="this.src='img/speakers/ScottChacon.jpg'" alt=""></a>
           <p class="note">CIO and R&D VP of Github</p>
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Minh Le</h6>
-          <a href="https://twitter.com/GoosemanTI" target="_blank"><img src="img/speakers/gooseman.png" onmouseover="this.src='img/speakers/back/gooseman.png'" onmouseout="this.src='img/speakers/gooseman.png'" alt=""></a>
+          <a href="22/speaker/MihnLe.html"><img src="img/speakers/gooseman.png" onmouseover="this.src='img/speakers/back/gooseman.png'" onmouseout="this.src='img/speakers/gooseman.png'" alt=""></a>
           <p class="note">Computer game developer and creator of Counter-Strike</p>
         </div>
         <!-- -->
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Carlos Fonseca</h6>
-          <img src="img/speakers/CFonseca.jpg" onmouseover="this.src='img/speakers/back/CFonseca.jpg'" onmouseout="this.src='img/speakers/CFonseca.jpg'" alt="">
+          <a href="22/speaker/CarlosFonseca.html"><img src="img/speakers/CFonseca.jpg" onmouseover="this.src='img/speakers/back/CFonseca.jpg'" onmouseout="this.src='img/speakers/CFonseca.jpg'" alt=""></a>
           <p class="note">Executive IT Architect at IBM Thomas J. Watson Research Center.</p>
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Josh Bleecher Snyder</h6>
-          <a href="https://twitter.com/offbymany" target="_blank"><img src="img/speakers/snyder.jpg" onmouseover="this.src='img/speakers/back/snyder.jpeg'" onmouseout="this.src='img/speakers/snyder.jpg'" alt=""></a>
+          <a href="22/speaker/JoshSnyder.html"><img src="img/speakers/snyder.jpg" onmouseover="this.src='img/speakers/back/snyder.jpeg'" onmouseout="this.src='img/speakers/snyder.jpg'" alt=""></a>
           <p class="note">Software Engineering Manager at PayPal and card.io Co-Founder</p>
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Bethany Andres-Beck</h6>
-          <img src="img/speakers/bethany.jpg" onmouseover="this.src='img/speakers/back/bethany.png'" onmouseout="this.src='img/speakers/bethany.jpg'" alt="">
+          <a href="22/speaker/BethanyAndres-Beck.html"><img src="img/speakers/bethany.jpg" onmouseover="this.src='img/speakers/back/bethany.png'" onmouseout="this.src='img/speakers/bethany.jpg'" alt=""></a>
           <p class="note">Software Engineer at Twitter</p>
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
@@ -251,27 +249,27 @@
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Adam Baldwin</h6>
-          <img src="img/speakers/baldwin.png" onmouseover="this.src='img/speakers/back/baldwin.png'" onmouseout="this.src='img/speakers/baldwin.png'" alt="">
+          <a href="22/speaker/AdamBaldwin.html"><img src="img/speakers/baldwin.png" onmouseover="this.src='img/speakers/back/baldwin.png'" onmouseout="this.src='img/speakers/baldwin.png'" alt=""></a>
           <p class="note">Chief Security Officer at &yet and Team Lead at ^lift security</p>
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Steve Francia</h6>
-          <img src="img/speakers/francia.jpg" onmouseover="this.src='img/speakers/back/francia.png'" onmouseout="this.src='img/speakers/francia.jpg'" alt="">
+          <a href="22/speaker/SteveFrancia.html"><img src="img/speakers/francia.jpg" onmouseover="this.src='img/speakers/back/francia.png'" onmouseout="this.src='img/speakers/francia.jpg'" alt=""></a>
           <p class="note"> Chief Developer Advocate for MongoDB</p>
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Steve Huffman</h6>
-          <img src="img/speakers/huffman.jpg" onmouseover="this.src='img/speakers/back/huffman.png'" onmouseout="this.src='img/speakers/huffman.jpg'" alt="">
+          <a href="22/speaker/SteveHuffman.html"><img src="img/speakers/huffman.jpg" onmouseover="this.src='img/speakers/back/huffman.png'" onmouseout="this.src='img/speakers/huffman.jpg'" alt=""></a>
           <p class="note"> Co-Founder of Reddit and Hipmunk</p>
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Phil Calçado</h6>
-          <img src="img/speakers/phil.png" onmouseover="this.src='img/speakers/back/phil.png'" onmouseout="this.src='img/speakers/phil.png'" alt="">
+          <a href="22/speaker/PhilCalcado.html"><img src="img/speakers/phil.png" onmouseover="this.src='img/speakers/back/phil.png'" onmouseout="this.src='img/speakers/phil.png'" alt=""></a>
           <p class="note"> Director of Engineering at SoundCloud</p>
         </div>
         <div class="all-33 medium-33 small-50 tiny-100">
           <h6>Peter Sunde</h6>
-          <img src="img/speakers/PeterSunde.png" onmouseover="this.src='img/speakers/back/PeterSunde.png'" onmouseout="this.src='img/speakers/PeterSunde.png'" alt="">
+          <a href="22/speaker/PeterSunde.html"><img src="img/speakers/PeterSunde.png" onmouseover="this.src='img/speakers/back/PeterSunde.png'" onmouseout="this.src='img/speakers/PeterSunde.png'" alt=""></a>
           <p class="note"> Co-founder and ex-spokesperson of The Pirate Bay</p>
         </div>
       </div>
