--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
         <h1><a href="#" title=""><img src="img/logo.png"></a></h1>
         <div class="description">
           SINFO is an annual not-for-profit event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition.
-          <br><br>
+          <br>
+          <a class="transparent-button" href="22/index.html" style="padding: 1em 1.5em 1em 1.5em;">Go to SINFO 22</a>
+          <br>
           <a class="social-icon" target="_blank" href="http://fb.com/sinfoist"><i class="social-icon fa fa-facebook"></i></a>
           <a class="social-icon" target="_blank" href="http://twitter.com/sinfo_ist"><i class="social-icon fa fa-twitter"></i></a>
           <a class="social-icon" target="_blank" href="http://youtube.com/sinfoist"><i class="social-icon fa fa-youtube"></i></a>
@@ -207,7 +209,7 @@
     <div class="ink-grid text-section previous-speakers">
       <div class="column-group gutters">
         <div class="all-100">
-          <h2>Confirmed Speakers for SINFO 22</h2>
+          <h2>Confirmed Speakers for SINFO 22  <span style="position: relative; top: -7px;" ><h10><a style="font-size: 10px;">visit website</a></h10></span></h2>
         </div>
       </div>
       <div class="column-group gutters">
