--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <span class="note">February 1st, 2015</span>
           <h3>New speaker announced!</h3>
           <p>
-            Peter Sunde. Peter is a computer expert with Norwegian and Finnish roots. He is best known for being a co-founder and ex-spokesperson of The Pirate Bay, a BitTorrent search engine.
+            Alberto López. Alberto works as Developer Evangelist at Paypal and Braintree, he will be present at our Startup Rush event, day 28.
           </p>
         </div>
         <div class="all-40 medium-50 small-100 tiny-100 justify-text">
@@ -273,6 +273,16 @@
           <h6>Peter Sunde</h6>
           <a href="22/speaker/PeterSunde.html"><img src="img/speakers/PeterSunde.png" onmouseover="this.src='img/speakers/back/PeterSunde.png'" onmouseout="this.src='img/speakers/PeterSunde.png'" alt=""></a>
           <p class="note"> Co-founder and ex-spokesperson of The Pirate Bay</p>
+        </div>
+        <div class="all-33 medium-33 small-50 tiny-100">
+          <h6>Feross Aboukhadijeh</h6>
+          <!--<a href="22/speaker/FerossAboukhadijeh.html">--><img src="img/speakers/Feross.png" onmouseover="this.src='img/speakers/back/Feross.png'" onmouseout="this.src='img/speakers/Feross.png'" alt=""><!--</a>-->
+          <p class="note">Software Engineer at Yahoo!</p>
+        </div>
+        <div class="all-33 medium-33 small-50 tiny-100">
+          <h6>Alberto López</h6>
+          <!--<a href="22/speaker/PeterSunde.html">--><img src="img/speakers/AlbertoL.png" onmouseover="this.src='img/speakers/back/AlbertoL.png'" onmouseout="this.src='img/speakers/AlbertoL.png'" alt=""><!--</a>-->
+          <p class="note"> PayPal Developer & Braintree</p>
         </div>
       </div>
     </div>
