Added feross and Alberto

--- a/22/index.html
+++ b/22/index.html
@@ -200,10 +200,10 @@
             <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="0">
               <!--<a href="speaker/EythorBender.html">-->
                 <div class="img-wrapper">
-                  <img src="assets/img/speaker/ManuelB.jpg" class="img-responsive img-circle" alt="manuel Boza" />
+                  <img src="assets/img/speaker/Feross.png" class="img-responsive img-circle" alt="Feross Aboukhadijeh" />
                 </div>
-                <div class="name">Manuel Boza</div>
-                <div class="sub">UNYQ</div>
+                <div class="name">Feross Aboukhadijeh</div>
+                <div class="sub">Yahoo!</div>
              <!-- </a>-->
             </div>
           </div>
@@ -282,6 +282,17 @@
                 <div class="name">Peter Sunde</div>
                 <div class="sub">Pirate Bay</div>
               </a>
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-3 col-xs-6">
+            <div class="speaker-item animated hiding" data-animation="fadeInUp" data-delay="0">
+              <!--<a href="speaker/EythorBender.html">-->
+                <div class="img-wrapper">
+                  <img src="assets/img/speaker/AlbertoL.png" class="img-responsive img-circle" alt="Alberto López" />
+                </div>
+                <div class="name">alberto López</div>
+                <div class="sub">Paypal & Braintree</div>
+             <!-- </a>-->
             </div>
           </div>
         </section>
