Added Feross schedule

--- a/22/index.html
+++ b/22/index.html
@@ -290,7 +290,7 @@
                 <div class="img-wrapper">
                   <img src="assets/img/speaker/AlbertoL.png" class="img-responsive img-circle" alt="Alberto López" />
                 </div>
-                <div class="name">alberto López</div>
+                <div class="name">Alberto López</div>
                 <div class="sub">Paypal & Braintree</div>
              <!-- </a>-->
             </div>
