--- a/22/schedule.html
+++ b/22/schedule.html
@@ -95,29 +95,29 @@
                   <div class="tab-pane fade in active" id="DayOne-1">
                     <div class="panel-group timeline-schedule" id="panelTimelineOne">
                       <!-- Speaker number 1 -->
-                      <!--<div class="panel panel-default">
+                      <div class="panel panel-default">
                         <div class="speaker-wrapper">
-                          <img src="assets/img/speaker/huffman.jpg" class="img-responsive img-circle" alt="speaker-2" />
+                          <img src="assets/img/speaker/Feross.jpg" class="img-responsive img-circle" alt="speaker-2" />
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 15h40</div>
-                            <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemTwo" class="collapsed">
-                               Steve Huffman - Reddit
+                            <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemOne" class="collapsed">
+                               Feross Aboukhadijeh - Yahoo!
                               <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                             </a>
                           </div>
                         </div>
-                        <div id="itemTwo" class="panel-collapse collapse">
+                        <div id="itemOne" class="panel-collapse collapse">
                           <div class="panel-body">
                             <article>
-                              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
-                              <p class="author"><a href="#"><strong><i class="fa fa-user"></i></strong></a></p>
+                              <p>details soon...</p>
+                              <p class="author"><!--<a href="speaker/SteveHuffman.html">--><strong><i class="fa fa-user"></i> Feross Aboukhadijeh - Software Engineer at Yahoo!</strong><!--</a>--></p>
                             </article>
                           </div>
                         </div>
-                      </div>-->
+                      </div>
                       <!-- Speaker number 2 -->
                       <div class="panel panel-default">
                         <div class="speaker-wrapper" style="width:50px; left: 70px;">
