Updated Fross image link

--- a/22/schedule.html
+++ b/22/schedule.html
@@ -97,11 +97,11 @@
                       <!-- Speaker number 1 -->
                       <div class="panel panel-default">
                         <div class="speaker-wrapper">
-                          <img src="assets/img/speaker/Feross.jpg" class="img-responsive img-circle" alt="speaker-2" />
+                          <img src="assets/img/speaker/Feross.png" class="img-responsive img-circle" alt="speaker-2" />
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
-                            <div class="time"><i class="fa fa-clock-o"></i> 15h40</div>
+                            <div class="time"><i class="fa fa-clock-o"></i> 14h00</div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemOne" class="collapsed">
                                Feross Aboukhadijeh - Yahoo!
                               <div class="pull-right fa fa-angle-up"></div>
