Updated Fross css

--- a/22/schedule.html
+++ b/22/schedule.html
@@ -96,7 +96,7 @@
                     <div class="panel-group timeline-schedule" id="panelTimelineOne">
                       <!-- Speaker number 1 -->
                       <div class="panel panel-default">
-                        <div class="speaker-wrapper">
+                        <div class="speaker-wrapper" style="width:50px; left: 70px;">
                           <img src="assets/img/speaker/Feross.png" class="img-responsive img-circle" alt="speaker-2" />
                         </div>
                         <div class="panel-heading">
