--- a/22/partners.html
+++ b/22/partners.html
@@ -129,12 +129,13 @@
             <li><a href="http://sapo.miniclip.com/games/pt/" target="_blank"><img src="assets/img/sponsor/Miniclip.png" alt="sponsor-1" /></a></li>
             <li><a href="http://www.itgrow.pt/pt/inicio" target="_blank"><img src="assets/img/sponsor/iTGROW.png" alt="sponsor-1" /></a></li>
             <li><a href="http://www.icreateconsulting.com/" target="_blank"><img src="assets/img/sponsor/icreate.png" alt="sponsor-1" /></a></li>
+            <li><a href="https://mandrill.com/" target="_blank"><img src="assets/img/sponsor/Mandrill.png" alt="sponsor-1" style="padding: 30px 30px;" /></a></li>
           </ul>
         </div>
         <div class="sub-title">Media Partners</div>
         <div class="row">
           <ul class="list-inline">
-            <li><a href="http://www.sapo.pt/" target="_blank">sapo</a></li>
+            <li><a href="http://www.sapo.pt/" target="_blank"><img src="assets/img/sponsor/sapo.jpg" alt="sponsor-1"  /></a></li>
           </ul>
         </div>
       </div>
