--- a/22/schedule.html
+++ b/22/schedule.html
@@ -103,7 +103,7 @@
                           <div class="panel-title">
                             <div class="time"><i class="fa fa-clock-o"></i> 14h00</div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemOne" class="collapsed">
-                               Feross Aboukhadijeh - Yahoo!
+                               Feross Aboukhadijeh
                               <div class="pull-right fa fa-angle-up"></div>
                               <div class="pull-right fa fa-angle-down"></div>
                             </a>
