Updated Fross place

--- a/22/schedule.html
+++ b/22/schedule.html
@@ -101,7 +101,7 @@
                         </div>
                         <div class="panel-heading">
                           <div class="panel-title">
-                            <div class="time"><i class="fa fa-clock-o"></i> 14h00</div>
+                            <div class="time"><i class="fa fa-clock-o"></i> 14h00 <div style="float: right"><i class="fa fa-map-marker"></i> Civil Engineering Building's Congress Center</div></div>
                             <a data-toggle="collapse" data-parent="#panelTimelineOne" href="#itemOne" class="collapsed">
                                Feross Aboukhadijeh
                               <div class="pull-right fa fa-angle-up"></div>
