--- a/22/index.html
+++ b/22/index.html
@@ -6,9 +6,9 @@
     <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge"><![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <title>Home</title>
-    <meta name="description" content="PSD to HTML5+CSS3 conversion.">
-    <meta name="keywords" content="PSD, HTML5, CSS3">
-    <meta name="author" content="Erwin Kaddy">
+    <meta name="description" content="SINFO is an annual not-for-profit event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition.">
+    <meta name="keywords" content="SINFO, Conference, Lisbon, Tech, IST">
+    <meta name="author" content="SINFO">
 
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,700' rel='stylesheet' type='text/css'>
