--- a/22/index.html
+++ b/22/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="SINFO">
     <meta property="og:title" content="SINFO 22"/>
     <meta property="og:description" content="SINFO is an annual not-for-profit event organised exclusively by college students who strive for a more interesting and ground-breaking event each edition."/>
-    <meta property="og:image" content="http://sinfo.org/22/assets/img/logo.png"/>
+    <meta property="og:image" content="https://sinfo.org/22/assets/img/header-home.jpg"/>
 
     <link href='http://fonts.googleapis.com/css?family=Ubuntu:700' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Roboto:100,300,700' rel='stylesheet' type='text/css'>
